# ai-assistant

./: .gitignore  install.bat  render.yaml  requirements.txt  start.bat
backend/: server.py
frontend/: index.html
micromouse/: .gitignore  LICENSE
micromouse/config/: robot.json
micromouse/docs/: ARCHITECTURE.md
micromouse/micromouse/: CMakeLists.txt  README.md  requirements.txt
micromouse/micromouse/docs/: ALGORITHMS.md  BUILDING.md  COMPETITION.md  HARDWARE.md
micromouse/micromouse/src/algorithms/: flood_fill.h
micromouse/micromouse/src/core/: maze.c  maze.h  robot.c  robot.h  sensor.c  sensor.h
micromouse/micromouse/src/utils/: config.h  pid.c  pid.h
micromouse/micromouse/tests/: test_algorithm.h  test_maze.h
micromouse/simulator/: sim.py
micromouse/src/: main.c
micromouse/src/algorithms/: flood_fill.c
micromouse/src/core/: motor.c  motor.h
micromouse/tests/: test_main.c
